Fix botched merge

BUG: 408991